<resources>
    <string name="app_name">Project 1</string>
    <string name="c">C</string>
    <string name="decimal">.</string>
    <string name="divide">/</string>
    <string name="divideBy100">%</string>
    <string name="eight">8</string>
    <string name="equals">=</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="minus">-</string>
    <string name="multiply">X</string>
    <string name="nine">9</string>
    <string name="one">1</string>
    <string name="plus">+</string>
    <string name="positiveOrNegative">+/-</string>
    <string name="result">0</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="zero">0</string>
    <string name="cos">cos</string>
    <string name="log_10">Log 10</string>
    <string name="ln">ln</string>
    <string name="sin">sin</string>
    <string name="tan">tan</string>
</resources>