<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/clear"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="188dp"
        android:insetLeft="2dp"
        android:insetRight="2dp"
        android:onClick="onClick"
        android:text="@string/c"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/divideBy100"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="189dp"
        android:insetLeft="2dp"
        android:insetRight="2dp"
        android:onClick="onClick"
        android:text="@string/divideBy100"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/two"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="461dp"
        android:insetLeft="2dp"
        android:insetRight="2dp"
        android:onClick="onClick"
        android:text="@string/two"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/divide"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="189dp"
        android:insetLeft="2dp"
        android:insetRight="2dp"
        android:onClick="onClick"
        android:text="@string/divide"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/one"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="461dp"
        android:insetLeft="2dp"
        android:insetRight="2dp"
        android:onClick="onClick"
        android:text="@string/one"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/equals"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="549dp"
        android:insetLeft="2dp"
        android:insetRight="2dp"
        android:onClick="onClick"
        android:text="@string/equals"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/eight"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="282dp"
        android:insetLeft="2dp"
        android:insetRight="2dp"
        android:onClick="onClick"
        android:text="@string/eight"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/minus"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="370dp"
        android:insetLeft="2dp"
        android:insetRight="2dp"
        android:onClick="onClick"
        android:text="@string/minus"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/zero"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="549dp"
        android:insetLeft="2dp"
        android:insetRight="2dp"
        android:onClick="onClick"
        android:text="@string/zero"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="@string/result"
        android:textAlignment="textEnd"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/five"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="370dp"
        android:insetLeft="2dp"
        android:insetRight="2dp"
        android:onClick="onClick"
        android:text="@string/five"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/plus"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="461dp"
        android:insetLeft="2dp"
        android:insetRight="2dp"
        android:onClick="onClick"
        android:text="@string/plus"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nine"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="282dp"
        android:insetLeft="2dp"
        android:insetRight="2dp"
        android:onClick="onClick"
        android:text="@string/nine"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/three"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="461dp"
        android:insetLeft="2dp"
        android:insetRight="2dp"
        android:onClick="onClick"
        android:text="@string/three"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/decimal"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="549dp"
        android:insetLeft="2dp"
        android:insetRight="2dp"
        android:onClick="onClick"
        android:text="@string/decimal"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/positiveOrNegative"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="188dp"
        android:insetLeft="2dp"
        android:insetRight="2dp"
        android:onClick="onClick"
        android:text="@string/positiveOrNegative"
        android:textSize="29sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/seven"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="282dp"
        android:insetLeft="2dp"
        android:insetRight="2dp"
        android:onClick="onClick"
        android:text="@string/seven"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/four"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="370dp"
        android:insetLeft="2dp"
        android:insetRight="2dp"
        android:onClick="onClick"
        android:text="@string/four"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="282dp"
        android:insetLeft="2dp"
        android:insetRight="2dp"
        android:onClick="onClick"
        android:text="@string/multiply"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/six"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="370dp"
        android:insetLeft="2dp"
        android:insetRight="2dp"
        android:onClick="onClick"
        android:text="@string/six"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>